# a

./: .clang-format  .gitignore  CMakeLists.txt  xmake.lua
include/: stb_image.h
include/engine/: engine.hpp  gl.hpp  object.hpp  shader.hpp  utils.hpp  window.hpp  window_state.hpp
include/engine/events/: common.hpp  event_manager.hpp  llevents.h  llevents.hpp
include/engine/gl/: gl.hpp  shader.hpp  texture.hpp
include/engine/scenes/: llscene.hpp
include/glad/: glad.h
include/imgui/: imconfig.h
include/logic/: events.h  events.hpp  imgui.hpp  objects.hpp  scenes.hpp
include/utils/: ptr.hpp  safeq.h  safeq.hpp
libs/: README.md
res/shaders/scene1/: fragment.glsl  vertex.glsl
res/shaders/scene2/: fragment.glsl  vertex.glsl
src/: main.cpp
src/engine/: engine.cpp  gl.cpp  object.cpp  shader.cpp  window.cpp  window_state.cpp
src/engine/events/: event_manager.cpp  llevents.cpp
src/engine/gl/: gl.cpp  shader.cpp  texture.cpp
src/engine/scenes/: llscene.cpp
src/glad/: glad.c
src/logic/: events.cpp  imgui.cpp  scenes.cpp
src/logic/objects/: Circle.cpp  MainImguiObject.cpp  SimpleTriangle.cpp  SimpleTriangleImgui.cpp
src/logic/scenes/: MainScene.cpp  scene1.cpp  scenes.cpp
